# SDL3pp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
include/SDL2pp/: a8.h  argb8888.h  b8.h  blend_mode.h  color.h  display_mode.h  error.h  event.h  event_queue.h  event_type.h  g8.h  image.h  index8.h  integer.h  key_code.h  key_event_type.h  key_modifier.h  key_state.h  keyboard.h  keyboard_event.h  keyboard_state.h  length.h  mouse.h  mouse_wheel_event.h  palette.h  pixel_base_unit.h  pixel_bit_depth.h  pixel_byte_depth.h  pixel_format.h  pixel_format_details.h  pixel_format_traits.h  pixel_type.h  r8.h  renderer.h  renderer_flags.h  scan_code.h  second_base_unit.h  size.h  surface.h  system_of_units.h  (+5 more)
include/SDL3pp/: a8.h  argb8888.h  b32f.h  b8.h  blend_mode.h  color.h  color_space.h  display_mode.h  error.h  event.h  event_queue.h  event_type.h  g32f.h  g8.h  image.h  index8.h  integer.h  key_code.h  key_event_type.h  key_modifier.h  keyboard.h  keyboard_event.h  keyboard_state.h  length.h  mouse.h  mouse_wheel_event.h  palette.h  pixel_base_unit.h  pixel_bit_depth.h  pixel_byte_depth.h  pixel_format.h  pixel_format_details.h  pixel_format_traits.h  pixel_type.h  primary_color.h  properties.h  r32f.h  r8.h  real.h  renderer.h  (+11 more)
samples/: CMakeLists.txt  plasma_fractal.cpp  sw_ray_tracer.cpp  tunnel_effect.cpp
samples/shared/: math.cpp  math.h  rgb96f.cpp  rgb96f.h  stopwatch.cpp  stopwatch.h
sources/: argb8888.cpp  blend_mode.cpp  color.cpp  display_mode.cpp  error.cpp  event.cpp  event_queue.cpp  index8.cpp  key_modifier.cpp  keyboard.cpp  keyboard_event.cpp  keyboard_state.cpp  mouse.cpp  mouse_wheel_event.cpp  palette.cpp  pixel_format.cpp  pixel_format_details.cpp  renderer.cpp  renderer_flags.cpp  rgb96f.cpp  surface.cpp  texture.cpp  window.cpp  window_flags.cpp
tests/: CMakeLists.txt  global_fixture.cpp  test_argb8888.cpp  test_color.cpp  test_event_queue.cpp  test_main.cpp  test_palette.cpp  test_renderer.cpp  test_surface.cpp  test_texture.cpp  test_window.cpp
